--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     padding: 0;
 }
 body{
-    background-color: black;
+    background-color: rgb(0, 0, 0);
 }
 .main{
     background-image: url("Assets/Images/bg.jpeg");
@@ -108,10 +108,11 @@ body{
 .gsb{
     background-color: red;
     border: none;
-    padding: 12px 45px;
+    padding: 12px 30px;
     font-size: 24px;
 }
 .first,.second,.third,.fourth{
+    text-align: center;
     margin:60px auto;
     width: 80vw;
     display: flex;
@@ -130,28 +131,30 @@ body{
     font-size: 27px;
     font-weight: 300;
 }
-.tv{
-    position: relative;
-}
-.tvvid{
-    position: absolute;
-    right: 71px;
-    width: 407px;
-    height: 398px;
-    z-index: -10;
-}
 .separator{
     margin-top: 75px;
     height:8px;
     background-color:rgb(38, 38, 38);
 }
-.phone{
+.secImg{
     position: relative;
+}
+.secImg video{
+    position: absolute;
+    width: 405px;
+    right: 73px;
+    height: 396px;
+    position: absolute;
+    z-index: -10;
+}
+#pos{
+    width: 350px;
+    right: 93px;
+    height: 292px;
 }
 .downloadbox{
     padding:10px 8px;
     background-color:black;
-    position: absolute;
     position: absolute;
     width: 325px;
     bottom: 40px;
@@ -170,22 +173,13 @@ body{
     font-family: var(--textfont);
 }
 .downtxt>:nth-child(2){
+    font-size: 0.9em;
     color: blue;
     font-weight: 300;
 }
-.compimg{
-    width:530px;
-    position: relative;
-    z-index: 10;
-}
-.compvid{
-    position: absolute;
-    right: 236px;
-    width: 352px;
-    height: 290px;
-}
-.kidsimg{
-    width: 540px;
+.faq{
+    margin: auto;
+    width: 80vw;
 }
 .faq>:nth-child(1){
     text-align: center;
@@ -202,9 +196,9 @@ body{
     background-color: #414141;
 }
 .faqbox{
+    cursor: pointer;
     transition: all 0.3s ease-in-out;
     box-sizing: border-box;
-    width: 80vw;
     margin: 10px auto;
     padding: 15px 30px;
     background-color: #2d2d2d;
@@ -231,16 +225,100 @@ footer{
     color: var(--footxtcol);
 }
 .links{
+    align-items: center;
     list-style: none;
-    padding:20px 0 5px 0;
+    padding:20px 0;
     box-sizing: border-box;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 40px 40px 40px 40px;
+    row-gap: 20px;
 }
 .link-items{
     color: var(--footxtcol);
 }
 .buttonf{
     padding-bottom:20px;
+}
+@media screen and (max-width:1000px) {
+    .sub>:nth-child(2){
+        font-size: 20px;
+    }
+    .sub>:nth-child(3) {
+        width: 89vw;
+    }
+    .first,.second,.third,.fourth{
+        flex-wrap: wrap;
+    }
+    .second,.fourth{
+        flex-wrap: wrap-reverse;
+    }
+    .links{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+}
+@media screen and (max-width:450px) {
+    .main .box{
+        height: 58vh;
+    }
+    .main{
+        height: 58vh;
+    }
+    .sub{
+        margin-top:0px;
+    }
+    .sub>span h1{
+        font-size: 33px;
+    }
+    .flex-box{
+        width: 88vw;
+    }
+    .logo img{
+        width: 90px;
+    }
+    .heading{
+        font-size:31px ;
+    }
+    .desc{
+        font-size: 18px;
+    }
+    .langbut{
+        width: 40px;
+        padding: 2px 3px;
+    }
+    .sign{
+        padding: 4px 12px;
+        margin-left: 5px;
+    }
+    .details{
+        display: flex;
+        flex-direction: column;
+    }
+    .secImg img{
+        width: 350px;
+    }
+    .secImg video{
+        height: 251px;
+        width: 259px;
+        right: 45px;
+    }
+    #pos{
+        height: 195px;
+        width: 232px;
+        right: 60px;
+    }
+    .downloadbox{
+        width: 180px;
+        left: 75px;
+        bottom: 22px;
+    }
+    .downimage img{
+        width: 26px;
+    }
+    .downtxt{
+        font-size: 11px;
+    }
+    .downtxt>:nth-child(2){
+        font-size: 8px;
+    }
 }
