--- a/style.css
+++ b/style.css
@@ -123,6 +123,7 @@ body{
     font-size: 50px;
     font-weight: bold;
     color: var(--textcol);
+    font-family: var(--textfont);
 }
 .desc{
     color: var(--textcol);
