--- a/style.css
+++ b/style.css
@@ -236,6 +236,7 @@ footer{
 }
 .link-items{
     color: var(--footxtcol);
+    font-family: var(--textfont);
 }
 .buttonf{
     padding-bottom:20px;
