--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
 .main{
     background-image: url("Assets/Images/bg.jpeg");
     height: 86vh;
-    background-size: max(1449px, 100vw);
+    background-size: max(1449px, 100vw) max();
     background-position: center center;
     position: relative;
     border-bottom: var(--sepbor);
@@ -39,6 +39,7 @@ body{
     padding: 25px;
     display: flex;
     justify-content:space-between;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.8000) 0.000%, rgba(0, 0, 0, 0.7889) 8.333%, rgba(0, 0, 0, 0.7556) 16.67%, rgba(0, 0, 0, 0.7000) 25.00%, rgba(0, 0, 0, 0.6222) 33.33%, rgba(0, 0, 0, 0.5222) 41.67%, rgba(0, 0, 0, 0.4000) 50.00%, rgba(0, 0, 0, 0.2778) 58.33%, rgba(0, 0, 0, 0.1778) 66.67%, rgba(0, 0, 0, 0.1000) 75.00%, rgba(0, 0, 0, 0.04444) 83.33%, rgba(0, 0, 0, 0.01111) 91.67%, rgba(0, 0, 0, 0.000) 100.0%);;
 }
 .buttonr:hover{
     background-color: rgb(208, 4, 4);
